# auto-video-agent

./: .env.example  .gitignore  README.md  USE_CASE.md  config.yaml  pyproject.toml  requirements.txt
auto_video_agent/: __main__.py  assets.py  branding.py  captions.py  cli.py  compositor.py  exporter.py  music.py  planner.py  scriptwriter.py  utils.py  voiceover.py
src/: __main__.py  assets.py  branding.py  captions.py  cli.py  compositor.py  exporter.py  music.py  planner.py  scriptwriter.py  voiceover.py
templates/: ac_promo.yaml  before_after_headlights.yaml  brake_shaking.yaml  check_engine_warning.yaml  oil_change_mistake.yaml  tire_rotation_tips.yaml  transmission_fluid_check.yaml
tests/: test_assets.py  test_captions.py  test_exporter.py  test_planner.py  test_scriptwriter.py  test_utils.py
